package m;

import java.io.Serializable;

public class BonCommande implements Serializable{
	private static final long serialVUID = -4243...;
	private long ref;
	private String motif;
	private String obs;
	private double montant;

...

}
